@@ -1,3 +1,5 @@
 .DS_Store
 
 *.txt~
+
+*.py~
